--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <div>
         <h1>Hello, <span></span></h1>
         <h1>My Name is <span></span></h1>
-        <h1 class="prince"><b>Prince Aironn Corasa</b><span></span></h1>
+        <h1 class="prince"><b>Prince Aironn D. Corasa</b><span></span></h1>
         <a href="#projects" type="button" class="cta">Portfolio</a>
       </div>
     </div>
@@ -157,11 +157,7 @@
       <div class="col-right">
         <h1 class="section-title">About <span>me</span></h1>
         <h2>Front End</h2>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Asperiores, velit alias eius non illum beatae atque
-          repellat ratione qui veritatis repudiandae adipisci maiores. At inventore necessitatibus deserunt
-          exercitationem cumque earum omnis ipsum rem accusantium quis, quas quia, accusamus provident suscipit magni!
-          Expedita sint ad dolore, commodi labore nihil velit earum ducimus nulla quae nostrum fugit aut, deserunt
-          reprehenderit libero enim!</p>
+        <p>I'm Prince Aironn D. Corasa, a student studying Information Technology, and I'm getting better at putting information online and starting to build the front of websites. I'm still learning HTML, CSS, and how to make simple websites, but I really want to learn more and get better by doing projects and practicing. Also, I'm very careful about details, I can type well, and I know how to work with documents on the computer. My certificates gave me a good start in IT, and I plan to keep learning as I look for jobs that involve working with data and building the front of websites.</p>
       
       </div>
     </div>
@@ -210,5 +206,6 @@
   
  
 </body>
+
 
 </html>
