--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
         <div class="contact-item">
           <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/new-post.png" /></div>
           <div class="contact-info">
-            <h1>Prince Aironn Corasa</h1>
+            <h1>Prince Aironn D. Corasa</h1>
             <h2>corasaprinceaironn@gmail.com</h2>
           </div>
         </div>
@@ -209,3 +209,4 @@
 
 
 </html>
+
