--- a/index.html
+++ b/index.html
@@ -6,6 +6,292 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
   <title>Princeeeeeeeeeeeeeeeeeeeeeeeeeee</title>
+
+  <style>
+    @import 'https://fonts.googleapis.com/css?family=Montserrat:300,400,700&display=swap';
+    * {
+      padding: 0;
+      margin: 0;
+      box-sizing: border-box;
+    }
+    html {
+      font-size: 10px;
+      font-family: 'Montserrat', sans-serif;
+      scroll-behavior: smooth;
+    }
+    a {
+      text-decoration: none;
+    }
+    .container {
+      min-height: 100vh;
+      width: 100%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+    img {
+      height: 100%;
+      width: 100%;
+      object-fit: cover;
+    }
+    p {
+      color: black;
+      font-size: 1.4rem;
+      margin-top: 5px;
+      line-height: 2.5rem;
+      font-weight: 300;
+      letter-spacing: 0.05rem;
+    }
+    .section-title {
+      font-size: 4rem;
+      font-weight: 300;
+      color: black;
+      margin-bottom: 10px;
+      text-transform: uppercase;
+      letter-spacing: 0.2rem;
+      text-align: center;
+    }
+    .section-title span {
+      color: crimson;
+    }
+    .cta {
+      display: inline-block;
+      padding: 10px 30px;
+      color: white;
+      background-color: transparent;
+      border: 2px solid crimson;
+      font-size: 2rem;
+      text-transform: uppercase;
+      letter-spacing: 0.1rem;
+      margin-top: 30px;
+      transition: .3s ease;
+      transition-property: background-color, color;
+    }
+    .cta:hover {
+      color: white;
+      background-color: crimson;
+    }
+    .brand h1 {
+      font-size: 3rem;
+      text-transform: uppercase;
+      color: white;
+    }
+    .brand h1 span {
+      color: crimson;
+    }
+
+    /* HEADER */
+    #header {
+      position: fixed;
+      z-index: 1000;
+      left: 0;
+      top: 0;
+      width: 100vw;
+      height: auto;
+    }
+    #header .header {
+      min-height: 8vh;
+      background-color: rgba(31, 30, 30, 0.24);
+      transition: 0.3s background-color;
+    }
+    #header .nav-bar {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      width: 100%;
+      height: 100%;
+      max-width: 1300px;
+      padding: 0 10px;
+    }
+
+    /* MOBILE NAV */
+    #header .nav-list ul {
+      list-style: none;
+      position: absolute;
+      background-color: rgb(31, 30, 30);
+      width: 100vw;
+      height: 100vh;
+      left: 100%;
+      top: 0;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      z-index: 1;
+      overflow-x: hidden;
+      transition: .5s ease left;
+    }
+    #header .nav-list ul.active {
+      left: 0%;
+    }
+    #header .nav-list ul a {
+      font-size: 2.5rem;
+      font-weight: 500;
+      color: white;
+      text-transform: uppercase;
+      padding: 20px;
+      display: block;
+      position: relative;
+    }
+
+    /* HOME */
+    #home {
+      background-size: cover;
+      background-position: center;
+      position: relative;
+      z-index: 1;
+    }
+    #home::after {
+      content: '';
+      position: absolute;
+      left: 0;
+      top: 0;
+      height: 100%;
+      width: 100%;
+      background-color: black;
+      opacity: .7;
+      z-index: -1;
+    }
+    #home .home {
+      max-width: 1200px;
+      margin: 0 auto;
+      padding: 0 50px;
+      justify-content: flex-start;
+    }
+    #home h1 {
+      display: block;
+      width: fit-content;
+      font-size: 4rem;
+      position: relative;
+      color: transparent;
+      animation: text_reveal 0.5s ease forwards;
+      animation-delay: 1s;
+    }
+
+    /* PROJECTS */
+    #projects .projects {
+      flex-direction: column;
+      max-width: 1200px;
+      margin: 0 auto;
+      padding: 100px 0;
+    }
+    #projects .all-projects {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+    #projects .project-item {
+      display: flex;
+      flex-direction: column;
+      width: 80%;
+      margin: 20px auto;
+      border-radius: 10px;
+      overflow: hidden;
+    }
+    #projects .project-info {
+      padding: 30px;
+      background-image: linear-gradient(60deg, #29323c 0%, #485563 100%);
+      color: white;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+    }
+    #projects .project-img {
+      height: 300px;
+      position: relative;
+      overflow: hidden;
+    }
+
+    /* ABOUT */
+    #about .about {
+      flex-direction: column-reverse;
+      text-align: center;
+      max-width: 1200px;
+      margin: 0 auto;
+      padding: 100px 20px;
+    }
+    #about .col-left {
+      width: 250px;
+      height: 360px;
+    }
+    #about .col-right {
+      width: 100%;
+    }
+
+    /* CONTACT */
+    #contact .contact {
+      flex-direction: column;
+      width: 90%;
+      max-width: 1200px;
+      margin: 0 auto;
+    }
+
+    /* FOOTER */
+    #footer {
+      background-image: linear-gradient(60deg, #29323c 0%, #485563 100%);
+    }
+    #footer .footer {
+      min-height: 200px;
+      flex-direction: column;
+      padding-top: 50px;
+      padding-bottom: 10px;
+    }
+
+    /* RESPONSIVE */
+    @media only screen and (min-width: 768px) {
+
+      .cta {
+        font-size: 2.5rem;
+        padding: 20px 60px;
+      }
+      h1.section-title {
+        font-size: 6rem;
+      }
+
+      #header .nav-list ul {
+        position: initial;
+        display: flex;
+        height: auto;
+        width: fit-content;
+        background-color: transparent;
+      }
+
+      /* PROJECTS DESKTOP */
+      #projects .project-item {
+        flex-direction: row;
+        height: 400px;
+        width: 100%;
+        border-radius: 0;
+      }
+      #projects .project-item:nth-child(even) {
+        flex-direction: row-reverse;
+      }
+
+      /* ABOUT DESKTOP */
+      #about .about {
+        flex-direction: row;
+      }
+      #about .col-left {
+        width: 600px;
+        height: 400px;
+        padding-left: 60px;
+      }
+      #about .col-right {
+        padding: 30px;
+        text-align: left;
+      }
+
+      /* CONTACT DESKTOP */
+      #contact .contact-items {
+        display: flex;
+        justify-content: space-evenly;
+      }
+      #contact .contact-item {
+        width: 30%;
+        flex-direction: row;
+      }
+    }
+  </style>
 </head>
 
 <body>
@@ -209,4 +495,5 @@
 
 
 </html>
+
 
